<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundColor"
    tools:context=".ui.popularFoodPage.PopularFoodDetailActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:contentDescription="@string/food_image"
        android:scaleType="centerCrop"
        android:src="@drawable/food0" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/nav_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:backgroundTint="#FFfcf4e4"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
            app:borderWidth="0dp"
            app:fabCustomSize="40dp"
            app:tint="#FF756d54" />

        <FrameLayout
            android:id="@+id/cart_btn_wrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/nav_cart_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:backgroundTint="#FFfcf4e4"
                android:contentDescription="@string/back"
                android:src="@drawable/ic_outline_shopping_cart_24"
                app:borderWidth="0dp"
                app:fabCustomSize="40dp"
                app:tint="#FF756d54" />

        </FrameLayout>

    </FrameLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/image"
        android:layout_marginTop="-20dp"
        style="@style/CustomCardViewStyle">

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/popular_food_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                style="@style/BigText"
                android:textSize="26sp"/>

            <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RatingBar
                    android:id="@+id/food_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?android:ratingBarStyleSmall"
                    android:layout_marginEnd="5dp"
                    android:rating="4"/>

                <TextView
                    android:id="@+id/tv_food_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/SmallText"
                    android:text="@string/food_rating"
                    android:layout_marginHorizontal="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/SmallText"
                    android:text="@string/comment_number"
                    android:layout_marginHorizontal="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/SmallText"
                    android:text="@string/comments"
                    android:layout_marginStart="5dp"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="fill_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    app:drawableStartCompat="@drawable/circle"
                    app:drawableTint="@color/iconColor1"
                    style="@style/SmallText"
                    android:drawablePadding="7dp"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="Normal"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    app:drawableStartCompat="@drawable/ic_baseline_location_24"
                    app:drawableTint="@color/mainColor"
                    style="@style/SmallText"
                    android:drawablePadding="7dp"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="1.7km"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    app:drawableStartCompat="@drawable/ic_baseline_time_24"
                    app:drawableTint="@color/iconColor2"
                    style="@style/SmallText"
                    android:drawablePadding="7dp"
                    android:gravity="center_vertical"
                    android:text="32min"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/introduce"
                style="@style/BigText"
                android:layout_marginVertical="20dp"/>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="100dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_introduce"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/SmallText"
                        android:textColor="@color/paraColor"
                        android:textSize="14sp"
                        android:maxLines="5"
                        android:text="@string/long_text"
                        android:ellipsize="end"/>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/btn_showmore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        app:cardElevation="0dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/btn_showmore_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/SmallText"
                                android:textSize="14sp"
                                android:textColor="@color/mainColor"
                                android:text="@string/show_more"/>

                            <ImageView
                                android:id="@+id/btn_showmore_icon"
                                android:layout_width="18dp"
                                android:layout_height="18dp"
                                android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
                                app:tint="@color/mainColor"
                                android:scaleType="center"
                                tools:ignore="ContentDescription" />


                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/buttonBackgroundColor"
        style="@style/CustomCardViewStyle2">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardElevation="0dp"
                android:layout_centerVertical="true"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="17dp">

                    <ImageButton
                        android:id="@+id/btn_decrease_quantity"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:background="@drawable/ic_baseline_remove_24"
                        android:backgroundTint="@color/signColor"
                        android:contentDescription="@string/decrease"
                        android:layout_gravity="center_vertical"/>

                    <TextView
                        android:id="@+id/tv_quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/BigText"
                        android:layout_marginHorizontal="5dp"
                        android:text="@string/quantity"/>

                    <ImageButton
                        android:id="@+id/btn_increase_quantity"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:background="@drawable/ic_baseline_add_24"
                        android:backgroundTint="@color/signColor"
                        android:contentDescription="@string/increase"
                        android:layout_gravity="center_vertical"/>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add_to_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center_vertical"
                android:paddingHorizontal="20dp"
                android:paddingVertical="20dp"
                android:stateListAnimator="@null"
                android:text="@string/add_to_card"
                android:textAllCaps="false"
                app:cornerRadius="20dp"
                tools:ignore="RelativeOverlap" />

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>