<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="10dp">

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/BigText"
        android:text="@string/app_name"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_marginTop="10dp"
            android:id="@+id/thumbnail_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"/>

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="end"
            android:layout_gravity="end">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginVertical="3dp"
                style="@style/SmallText"
                android:textColor="@color/titleColor"
                android:text="@string/total"/>

            <TextView
                android:id="@+id/tv_num_of_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginVertical="3dp"
                style="@style/BigText"
                android:textColor="@color/titleColor"
                android:text="@string/items"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="3dp"
                android:text="more"
                android:textAllCaps="false"
                app:strokeColor="@color/mainColor"
                style="?attr/materialButtonOutlinedStyle"/>

        </LinearLayout>

    </FrameLayout>

</LinearLayout>