<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="220dp"
        app:cardCornerRadius="30dp"
        android:backgroundTint="#ff69c5df"
        android:layout_marginHorizontal="5dp">

        <ImageView
            android:id="@+id/image_popular_food"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/food0"
            android:scaleType="centerCrop"
            android:contentDescription="@string/food_image" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="-70dp"
        android:layout_marginHorizontal="13dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:paddingTop="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/popular_food_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                style="@style/BigText"/>

            <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RatingBar
                    android:id="@+id/food_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?android:ratingBarStyleSmall"
                    android:layout_marginEnd="5dp"
                    android:rating="4"/>

                <TextView
                    android:id="@+id/tv_food_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/SmallText"
                    android:text="@string/food_rating"
                    android:layout_marginHorizontal="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/SmallText"
                    android:text="@string/comment_number"
                    android:layout_marginHorizontal="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/SmallText"
                    android:text="@string/comments"
                    android:layout_marginStart="5dp"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="fill_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    app:drawableStartCompat="@drawable/circle"
                    app:drawableTint="@color/iconColor1"
                    style="@style/SmallText"
                    android:drawablePadding="7dp"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="Normal"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    app:drawableStartCompat="@drawable/ic_baseline_location_24"
                    app:drawableTint="@color/mainColor"
                    style="@style/SmallText"
                    android:drawablePadding="7dp"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="1.7km"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    app:drawableStartCompat="@drawable/ic_baseline_time_24"
                    app:drawableTint="@color/iconColor2"
                    style="@style/SmallText"
                    android:drawablePadding="7dp"
                    android:gravity="center_vertical"
                    android:text="32min"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>