<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:paddingVertical="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="1dp">

        <ImageView
            android:id="@+id/food_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/food0"
            android:scaleType="centerCrop"/>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/cart_food_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/BigText"
            android:text="Bitter Orange Juice" />

        <TextView
            android:id="@+id/food_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            style="@style/SmallText"
            android:text="Spicy"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/item_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BigText"
                android:text="@string/item_price"
                android:textColor="#ffff5252"/>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp"
                android:layout_gravity="end"
                android:backgroundTint="@color/white">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/btn_decrease_quantity"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:background="@drawable/ic_baseline_remove_24"
                        android:backgroundTint="@color/signColor"
                        android:contentDescription="@string/decrease"
                        android:layout_gravity="center_vertical"/>

                    <TextView
                        android:id="@+id/tv_quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/BigText"
                        android:layout_marginHorizontal="5dp"
                        android:text="@string/quantity"/>

                    <ImageButton
                        android:id="@+id/btn_increase_quantity"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:background="@drawable/ic_baseline_add_24"
                        android:backgroundTint="@color/signColor"
                        android:contentDescription="@string/increase"
                        android:layout_gravity="center_vertical"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </FrameLayout>

    </LinearLayout>

</LinearLayout>