<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@color/backgroundColor">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/popular_food_progress_circular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="230dp"
                android:layout_marginBottom="120dp"
                android:indeterminate="true"
                app:indicatorColor="@color/mainColor"/>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/vp_food"
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:layout_marginTop="88dp"
                android:visibility="gone"/>

            <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
                android:id="@+id/indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:dotsColor="#9E9E9E"
                app:dotsCornerRadius="8dp"
                app:dotsSize="10dp"
                app:dotsSpacing="5dp"
                app:dotsWidthFactor="2.5"
                app:selectedDotColor="@color/mainColor"
                android:visibility="gone"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp">

                <TextView
                    style="@style/BigText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/recommended" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-5dp"
                    android:layout_marginEnd="10dp"
                    android:text="."
                    android:textSize="24sp"
                    tools:ignore="HardcodedText" />

                <TextView
                    style="@style/SmallText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/food_pairing" />

            </LinearLayout>

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/recommended_food_progress_circular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                app:indicatorColor="@color/mainColor"
                android:indeterminate="true"
                android:visibility="gone"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_popular_food"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                tools:itemCount="10"
                tools:listitem="@layout/item_food_recommended"
                android:visibility="visible"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <FrameLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundColor"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                style="@style/BigText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/mainColor" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/SmallText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="#8a000000" />

                <ImageButton
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="2dp"
                    android:src="@drawable/ic_baseline_arrow_drop_down_24"
                    app:tint="@color/black" />

            </LinearLayout>

        </LinearLayout>

        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:background="@drawable/round_corner_15dp"
            android:backgroundTint="@color/mainColor"
            android:contentDescription="@string/search_btn_description"
            android:src="@drawable/ic_baseline_search_24"
            app:cornerRadius="10dp" />

    </FrameLayout>

</RelativeLayout>